discovery-service/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: discovery-service-ingress
spec:
  rules:
    - http:
        paths:
          - path: /discovery
            pathType: Prefix
            backend:
              service:
                name: discovery-service
                port:
                  number: 80
